--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "immutable": "^4.3.6",
     "tree-sitter": "^0.21.1",
     "tree-sitter-crystal-walnut": "1.0.7",
     "ts-pattern": "^5.1.2"
