--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "immutable": "^4.3.6",
-    "js-csp": "^1.0.1",
+    "rxjs": "^7.8.1",
     "tree-sitter": "^0.21.1",
     "tree-sitter-crystal-walnut": "1.0.12",
     "ts-pattern": "^5.1.2"
